# slio-git

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.codex/prompts/: speckit.analyze.md
.github/workflows/: release.yml
e2e/: conftest.py  requirements.txt  run.sh  test_commit_advanced.py  test_history_view.py  test_keyboard_shortcuts.py  test_navigation_rail.py  test_push_pull_dialog.py  test_window_resize.py
e2e/actions/: __init__.py  app.py  base.py  branch.py  commit.py  stash.py  toolbar.py
e2e/driver/: __init__.py  image_match.py  keyboard.py  mouse.py  screen.py  window.py
e2e/dsl/: __init__.py  executor.py  parser.py
e2e/refs/: README.md
e2e/scenarios/: conftest.py  test_branch_switch.py  test_cherry_pick.py  test_commit_amend.py  test_commit_flow.py  test_conflict_resolver.py  test_detached_head.py  test_developer_workflows.py  test_diff_toggle.py  (+21 more)
scripts/: package-linux-tarball.sh  package-macos-dmg.sh  package-windows-zip.sh
site/: index.html
src-ui/: Cargo.toml
src-ui/assets/: AppIcon.icns  icon_128.rgba  icon_64.rgba
src-ui/src/: file_watcher.rs  i18n.rs  keyboard.rs  logging.rs  main.rs  state.rs  theme.rs  thread_pool.rs
src-ui/src/components/: mod.rs  rail_icons.rs  status_icons.rs
src-ui/src/views/: branch_popup.rs  commit_dialog.rs  history_view.rs  main_window.rs  mod.rs  rebase_editor.rs  remote_dialog.rs  settings_view.rs  stash_panel.rs  tag_dialog.rs  worktree_view.rs
src-ui/src/widgets/: button.rs  changelist.rs  commit_compare.rs  commit_panel.rs  conflict_resolver.rs  diff_core.rs  diff_editor.rs  diff_file_header.rs  diff_viewer.rs  file_picker.rs  log_tabs.rs  menu.rs  merge_editor.rs  mod.rs  progress_bar.rs  scrollable.rs  split_diff_viewer.rs  statusbar.rs  syntax_highlighting.rs  text_input.rs  tree_widget.rs
src/git-core/: Cargo.toml
src/git-core/src/: blame.rs  branch.rs  commit.rs  commit_actions.rs  diff.rs  error.rs  git_utils.rs  graph.rs  history.rs  index.rs  lib.rs  llm.rs  process.rs  rebase.rs  remote.rs  repository.rs  signature.rs  stash.rs  submodule.rs  tag.rs  worktree.rs
src/git-core/tests/: additional_tests.rs  new_modules_integration.rs  test_helpers.rs  workflow_regressions.rs
(+116 files in other folders)
