[package]
name = "git-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
git2 = { workspace = true }
notify = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }

serde_json = { workspace = true }
dirs-next = { workspace = true }
similar = "3.0.0"

[dev-dependencies]
tempfile = { workspace = true }
